kubernetes/infrastructure/traefik/traefikDashboardIngress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-ingress-http
  namespace: default

spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.slux-solutions.com`)
      kind: Rule 
      middlewares:
        - name: https-redirect
          namespace: default
      services:
        - name: api@internal
          kind: TraefikService

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-ingress-https
  namespace: default

spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule 
      match: Host(`traefik.slux-solutions.com`)
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: slux-solutions-wildcard-cert
